# rust-bare-metal-demo

./: README.md
blink-host/src/: lib.rs
nucleoh723zg-blink/: Cargo.toml  Embed.toml
nucleoh723zg-rtic-usart3-serial-blinky/: Cargo.toml
nucleoh723zg-rtic-usart3-serial-blinky/src/: main.rs
rp2040-blink/.cargo/: config.toml
rp2040-blink/src/: main.rs
rp2040-rtic-usb-serial-blinky/: Cargo.toml  memory.x
rp2040-rtic-usb-serial-blinky/.cargo/: config.toml
rp2040-rtic-usb-serial-blinky/src/: main.rs
