[package]
authors = ["Michael Kefeder"]
edition = "2021"
readme = "README.md"
name = "nucleoh723zg-serial-blinky"
version = "0.1.0"
resolver = "2"
description = "RTIC-based serial processing blinky program for the NUCLEO-H723ZG board"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic = { version = "2.0.0-alpha.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# board-specific features
stm32h7xx-hal = {version = "0.12.2", features = ["stm32h735","rt","device-selected"]}

blink-proto = { path = "../blink-proto" }
heapless = "0.7.16"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Was
#[dependencies]
#cortex-m = "0.7"
#cortex-m-rt = "0.7"
#embedded-hal = { version = "0.2.5", features = ["unproven"] }
#defmt = "0.3.4"
#defmt-rtt = "0.3"
#panic-halt = "0.2.0"
#panic-probe = { version = "0.3", features = ["print-defmt"] }
#rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac", branch="main" }
#rp2040-boot2 = "0.1.0"
#rp-pico = "0.7.0"
#rp2040-hal = "0.8.2"
#
#[profile.release]
#codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations
